# Hola

./: build.gradle  config.gradle  config_app.gradle  config_lib.gradle  deps.gradle  settings.gradle  settings.gradle.kts  version.gradle
app/: build.gradle
app/media/: build.gradle
app/media/src/main/: AndroidManifest.xml
app/media/src/main/res/drawable/: ic_app_settings.xml  ic_media_cover.xml  ic_media_menu.xml  ic_media_menu_mini.xml  ic_media_music.xml  ic_media_pause.xml  ic_media_pause_mini.xml  ic_media_play.xml  ic_media_play_mini.xml
app/media/src/main/res/layout/: activity_main.xml  fragment_main.xml  media_item_view.xml  view_mini_player.xml
app/media/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/music/: build.gradle
app/music/src/main/: AndroidManifest.xml
app/music/src/main/cpp/: CMakeLists.txt  VideoPlyerCode.txt  audio-core.h  audio_core.cpp  audio_core.h  consts.h  frame-core.h  frame_core.cpp  frame_core.h  media-core.h  media-player.cpp  media-player.h  media_core.cpp  media_core.h  media_player.cpp  media_player.h  native-lib.cpp  play-status.cpp  play-status.h  play_status.h
app/music/src/main/res/layout/: activity_main.xml
app/music/src/main/res/values-night/: themes.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hola/demo/: ApiService.kt  HolaApp.kt  MainActivity.kt  Movie.kt  MovieEntity.kt  MovieUseCase.kt
app/src/main/res/layout/: item_number_view.xml  item_string_view.xml  main_activity.xml  main_fragment.xml
app/src/main/res/values/: strings.xml  themes.xml
app/weather/: build.gradle  keystore
app/weather/schemas/com.hola.app.weather.repository.locale.WeatherDb/: 1.json
app/weather/src/main/: AndroidManifest.xml
app/weather/src/main/res/layout/: activity_main.xml  fragment_city.xml  fragment_main.xml  fragment_manage_city.xml  fragment_search_city.xml
app/weather/src/main/res/values/: attrs.xml  themes.xml
app/weather/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib_arch/: build.gradle
lib_arch/src/main/: AndroidManifest.xml
lib_arch/src/main/java/com/hola/arch/: FlowExt.kt  IApiResponse.kt
lib_base/: build.gradle
lib_base/src/main/: AndroidManifest.xml
lib_base/src/main/java/com/hola/base/: BaseApplication.kt  MyView.kt
lib_blur/: build.gradle
lib_blur/src/main/cpp/: CMakeLists.txt  JniEntryPoints.cpp
lib_common/: build.gradle
lib_common/src/main/: AndroidManifest.xml
lib_common/src/main/java/com/hola/utils/: AppProxy.kt
lib_database/: build.gradle
lib_database/src/androidTest/java/com/hola/database/: ExampleInstrumentedTest.kt
lib_database/src/main/: AndroidManifest.xml
lib_database/src/test/java/com/hola/database/: ExampleUnitTest.kt
lib_datastore/: build.gradle
lib_datastore/src/main/: AndroidManifest.xml
lib_datastore/src/main/java/com/hola/datastore/: DataStore.kt  IDataSaver.kt  SPDataSaver.kt
lib_extends/: build.gradle
lib_extends/src/main/: AndroidManifest.xml
lib_location/: build.gradle
lib_location/src/main/: AndroidManifest.xml
lib_network/: build.gradle
lib_network/src/main/: AndroidManifest.xml
lib_plugin/: build.gradle
lib_plugin/src/main/: AndroidManifest.xml
lib_skin/: build.gradle
lib_skin/src/main/: AndroidManifest.xml
lib_skin/src/main/res/values/: skin_attrs.xml
lib_viewbind/: build.gradle
lib_viewbind/src/main/: AndroidManifest.xml
skin_pkg/: build.gradle
skin_pkg/src/main/: AndroidManifest.xml
skin_pkg/src/main/res/values/: colors.xml  strings.xml
(+265 files in other folders)
