# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.

cmake_minimum_required(VERSION 3.4.1)

# Declares and names the project.

project("music")

# Creates and names a library, sets it as either STATIC
# or SHARED, and provides the relative paths to its source code.
# You can define multiple libraries, and CMake builds them for you.
# Gradle automatically packages shared libraries with your APK.
add_library( # Sets the name of the library.
        music
        # Sets the library as a shared library.
        SHARED

        # Provides a relative path to your source file(s).
        native-lib.cpp)

# Searches for a specified prebuilt library and stores the path as a
# variable. Because CMake includes system libraries in the search path by
# default, you only need to specify the name of the public NDK library
# you want to add. CMake verifies that the library exists before
# completing its build.

set(SO_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/${ANDROID_ABI})
add_library(avcodec SHARED IMPORTED)
add_library(avformat SHARED IMPORTED)
add_library(avutil SHARED IMPORTED)
add_library(swscale SHARED IMPORTED)
add_library(swresample SHARED IMPORTED)
add_library(avdevice SHARED IMPORTED)
add_library(avfilter SHARED IMPORTED)
add_library(postproc SHARED IMPORTED)
set_target_properties(avcodec PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libavcodec.so)
set_target_properties(avformat PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libavformat.so)
set_target_properties(avutil PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libavutil.so)
set_target_properties(swscale PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libswscale.so)
set_target_properties(swresample PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libswresample.so)
set_target_properties(avdevice PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libavdevice.so)
set_target_properties(avfilter PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libavfilter.so)
set_target_properties(postproc PROPERTIES IMPORTED_LOCATION ${SO_PATH}/libpostproc.so)

include_directories("${CMAKE_SOURCE_DIR}/includes/${ANDROID_ABI}")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_SOURCE_DIR}/../../libs/${ANDROID_ABI}")
#message(${CMAKE_SOURCE_DIR}/../../libs/${ANDROID_ABI})
find_library( # Sets the name of the path variable.
        log-lib

        # Specifies the name of the NDK library that
        # you want CMake to locate.
        log)

# Specifies libraries CMake should link to your target library. You
# can link multiple libraries, such as libraries you define in this
# build script, prebuilt third-party libraries, or system libraries.
target_link_libraries( # Specifies the target library.
        music
        avcodec avdevice avfilter avformat avutil postproc swresample swscale
        ${log-lib})